Bumped down the fixed tab links' z-indexes so they fall below the modal overlay

--- a/modules/ext.articleFeedbackv5/ext.articleFeedbackv5.css
+++ b/modules/ext.articleFeedbackv5/ext.articleFeedbackv5.css
@@ -54,7 +54,7 @@
 	text-align: center;
 	writing-mode: tb-rl;*/	
 	position: absolute;
-	z-index: 100000;
+	z-index: 999;
 }
 .articleFeedbackv5-fixedtablink:hover {
 	text-decoration: none;
@@ -84,7 +84,7 @@
 	padding: 5px 10px;
 	text-align: center;
 	position: absolute;
-	z-index: 100000;
+	z-index: 999;
 }
 .articleFeedbackv5-bottomrighttablink:hover {
 	text-decoration: none;
